# Fibonacci

./: CMakeLists.txt  README.md  fib
include/: fib.h
src/: fib.c
